# serializer version: 1
# name: test_sensor_snapshot[sensor.48_9_carbon_monoxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_carbon_monoxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CO: 'carbon_monoxide'>,
    'original_icon': None,
    'original_name': 'Carbon monoxide',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'co_48_9',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_carbon_monoxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_monoxide',
      'friendly_name': '48_9 Carbon monoxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_carbon_monoxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.26902',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_lqi_de_category-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'very_good_air_quality',
        'good_air_quality',
        'moderate_air_quality',
        'poor_air_quality',
        'very_poor_air_quality',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_lqi_de_category',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'LQI (DE) Category',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'local_category',
    'unique_id': 'local_category_48_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_lqi_de_category-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': '48_9 LQI (DE) Category',
      'options': list([
        'very_good_air_quality',
        'good_air_quality',
        'moderate_air_quality',
        'poor_air_quality',
        'very_poor_air_quality',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_lqi_de_category',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'good_air_quality',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_lqi_de_dominant_pollutant-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'no2',
        'o3',
        'pm10',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_lqi_de_dominant_pollutant',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'LQI (DE) Dominant Pollutant',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'local_dominant_pollutant',
    'unique_id': 'local_dominant_pollutant_48_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_lqi_de_dominant_pollutant-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': '48_9 LQI (DE) Dominant Pollutant',
      'options': list([
        'no2',
        'o3',
        'pm10',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_lqi_de_dominant_pollutant',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'no2',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_nitrogen_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_nitrogen_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Nitrogen dioxide',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'nitrogen_dioxide',
    'unique_id': 'no2_48_9',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_nitrogen_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '48_9 Nitrogen dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_nitrogen_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '14.18',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_ozone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_ozone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ozone',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ozone',
    'unique_id': 'o3_48_9',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_ozone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '48_9 Ozone',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_ozone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.94',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'PM10',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'pm10_48_9',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm10',
      'friendly_name': '48_9 PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_pm10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21.95',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'pm25_48_9',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': '48_9 PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.6',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_sulphur_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_sulphur_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sulphur dioxide',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sulphur_dioxide',
    'unique_id': 'so2_48_9',
    'unit_of_measurement': 'ppb',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_sulphur_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '48_9 Sulphur dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppb',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_sulphur_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.2',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_uaqi_category-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'excellent_air_quality',
        'good_air_quality',
        'moderate_air_quality',
        'low_air_quality',
        'poor_air_quality',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_uaqi_category',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'UAQI Category',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uaqi_category',
    'unique_id': 'uaqi_category_48_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_uaqi_category-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': '48_9 UAQI Category',
      'options': list([
        'excellent_air_quality',
        'good_air_quality',
        'moderate_air_quality',
        'low_air_quality',
        'poor_air_quality',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_uaqi_category',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'excellent_air_quality',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_uaqi_dominant_pollutant-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'co',
        'no2',
        'o3',
        'pm10',
        'pm25',
        'so2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_uaqi_dominant_pollutant',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'UAQI Dominant Pollutant',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uaqi_dominant_pollutant',
    'unique_id': 'uaqi_dominant_pollutant_48_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_uaqi_dominant_pollutant-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': '48_9 UAQI Dominant Pollutant',
      'options': list([
        'co',
        'no2',
        'o3',
        'pm10',
        'pm25',
        'so2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_uaqi_dominant_pollutant',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'o3',
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_universal_air_quality_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.48_9_universal_air_quality_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.AQI: 'aqi'>,
    'original_icon': None,
    'original_name': 'Universal Air Quality Index',
    'platform': 'google_air_quality',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uaqi',
    'unique_id': 'uaqi_48_9',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.48_9_universal_air_quality_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': '48_9 Universal Air Quality Index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.48_9_universal_air_quality_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
